Cleanup code (currently not the same as before)
This no longer trains on all the data, just ChEMBL.

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "dfa670a6-19bc-42f3-b4e4-406c9e826375",
+   "metadata": {},
+   "source": [
+    "# Transporter classification training code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cdd2d221-6cd8-4d1e-b85c-915bbdbcbea3",
    "metadata": {},
    "source": [
@@ -9,31 +17,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1e568be2-e0dc-4f21-844a-90562ee55c07",
-   "metadata": {},
-   "source": [
-    "### Setup Intel Extensions"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eefe4769-3c81-400e-953d-38f2bbec243a",
+   "id": "4c706b0d-a740-493b-a2f1-903577592c1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearnex import patch_sklearn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd44d063-ba5f-4e18-adc4-91ddaceb357b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# patch_sklearn()"
+    "%load_ext lab_black"
    ]
   },
   {
@@ -47,15 +37,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "17c1fcde-ce90-4a2a-9170-6536f0db792b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c07295d7-366f-4516-9e25-de7f037824bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bb0b2a38-665f-4654-b511-447b2e2c91b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "seed = 0\n",
-    "\n",
-    "\n",
     "def rng():\n",
     "    return np.random.RandomState(seed)"
    ]
@@ -83,7 +88,7 @@
    "id": "d0b910dd-00dd-48cf-bc7e-0799fe9a002e",
    "metadata": {},
    "source": [
-    "### Preprocessing and parameter search"
+    "### Preprocessing"
    ]
   },
   {
@@ -93,8 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import FunctionTransformer"
+    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
@@ -104,18 +108,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from molvs import Standardizer\n",
     "from common.lib.descriptors.cdk import ECFPID, ECFPTransformer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e251c23d-6f09-4ed7-844f-a97c2a424dd3",
+   "id": "699d1783-c3f7-4a94-986c-48d5530f18a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from common.lib.sklearn import V"
+    "from sklearn.preprocessing import FunctionTransformer\n",
+    "from molvs import Standardizer\n",
+    "from rdkit.Chem.rdchem import Mol\n",
+    "import numpy as np"
    ]
   },
   {
@@ -127,10 +133,23 @@
    "source": [
     "preprocessing_pipeline = Pipeline(\n",
     "    steps=[\n",
-    "        (\"standardizer\", FunctionTransformer(V(Standardizer().fragment_parent))),\n",
+    "        (\n",
+    "            \"standardizer\",\n",
+    "            FunctionTransformer(\n",
+    "                np.vectorize(Standardizer().fragment_parent, otypes=[Mol])\n",
+    "            ),\n",
+    "        ),\n",
     "        (\"descriptors\", ECFPTransformer(ECFPID.ECFP4)),\n",
     "    ]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0709982-1e80-4229-b7a8-f1a0c29729ec",
+   "metadata": {},
+   "source": [
+    "### Parameter search"
    ]
   },
   {
@@ -140,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import KFold, RandomizedSearchCV"
+    "from sklearn.model_selection import KFold, GridSearchCV"
    ]
   },
   {
@@ -150,10 +169,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_parameter_search(pipeline, cv_params):\n",
-    "    return RandomizedSearchCV(\n",
-    "        # Pipeline(steps=preprocessing_pipeline.steps + pipeline.steps, memory=\"logs/cache\"),\n",
-    "        pipeline,\n",
+    "def make_parameter_search(model, cv_params):\n",
+    "    return GridSearchCV(\n",
+    "        model,\n",
     "        cv_params,\n",
     "        scoring=\"balanced_accuracy\",\n",
     "        refit=True,\n",
@@ -161,11 +179,7 @@
     "        verbose=3,\n",
     "        error_score=\"raise\",\n",
     "        n_jobs=-1,\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def parameter_search_name(ps):\n",
-    "    return ps.estimator.steps[-1][0]"
+    "    )"
    ]
   },
   {
@@ -173,7 +187,7 @@
    "id": "b86ccaef-1633-4630-94de-619cc83e99f1",
    "metadata": {},
    "source": [
-    "### Cross validation"
+    "### Cross validation helpers"
    ]
   },
   {
@@ -190,22 +204,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76a7b569-125f-41f7-97c5-c29bf466f054",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def score(model, X, y, scoring={}):\n",
-    "    return pd.DataFrame({key: [get_scorer(definition)(model, X, y)] for key, definition in scoring.items()})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a851a464-d2bd-4a24-a99d-e2b1dd200a9b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def external_validation(model, X, y):\n",
+    "    def score(model, X, y, scoring={}):\n",
+    "        return pd.DataFrame(\n",
+    "            {\n",
+    "                key: [get_scorer(definition)(model, X, y)]\n",
+    "                for key, definition in scoring.items()\n",
+    "            }\n",
+    "        )\n",
+    "\n",
     "    return score(\n",
     "        model,\n",
     "        X,\n",
@@ -266,7 +277,8 @@
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
@@ -303,7 +315,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
@@ -344,7 +357,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
@@ -373,7 +387,8 @@
    "outputs": [],
    "source": [
     "from sklearn.kernel_approximation import Nystroem\n",
-    "from sklearn.svm import SVC"
+    "from sklearn.svm import SVC\n",
+    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
@@ -406,7 +421,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from xgboost import XGBClassifier"
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
@@ -440,22 +456,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = [clf_logr, clf_rf, clf_knn, clf_svc, clf_xgb]\n",
-    "targets = [\n",
-    "    \"BCRP\",\n",
-    "    \"BCRP-S\",\n",
-    "    \"BSEP\",\n",
-    "    \"MATE1\",\n",
-    "    \"MDR1\",\n",
-    "    \"MDR1-S\",\n",
-    "    \"MRP2-S\",\n",
-    "    \"MRP3\",\n",
-    "    \"MRP3-S\",\n",
-    "    \"OATP1B1\",\n",
-    "    \"OATP1B3\",\n",
-    "    \"OCT1\",\n",
-    "    \"OCT2\",\n",
-    "]"
+    "models = {\n",
+    "    \"logr_clf\": clf_logr,\n",
+    "    \"rf_clf\": clf_rf,\n",
+    "    \"knn_clf\": clf_knn,\n",
+    "    \"svc_clf\": clf_svc,\n",
+    "    \"xgb_clf\": clf_xgb,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9f83a9c-1dde-480f-88e3-de32ae240aaf",
+   "metadata": {},
+   "source": [
+    "## Define input data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e704d2ea-96cc-4ff8-803e-092adc7d96b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from rdkit.Chem.PandasTools import LoadSDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8531d3b8-c07e-409b-aae5-85bce27b0ca2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targets = {\n",
+    "    (\"Inhibition\", \"BCRP\"): \"BCRP\",\n",
+    "    (\"Inhibition\", \"BSEP\"): \"BSEP\",\n",
+    "    (\"Inhibition\", \"MATE1\"): \"MATE1\",\n",
+    "    (\"Inhibition\", \"MDR1\"): \"MDR1\",\n",
+    "    (\"Inhibition\", \"MRP3\"): \"MRP3\",\n",
+    "    (\"Inhibition\", \"OATP1B1\"): \"OATP1B1\",\n",
+    "    (\"Inhibition\", \"OATP1B3\"): \"OATP1B3\",\n",
+    "    (\"Inhibition\", \"OCT1\"): \"OCT1\",\n",
+    "    (\"Inhibition\", \"OCT2\"): \"OCT2\",\n",
+    "    # (\"Substrate\", \"BCRP\"): \"BCRP-S\",\n",
+    "    # (\"Substrate\", \"MDR1\"): \"MDR1-S\",\n",
+    "    # (\"Substrate\", \"MRP2\"): \"MRP2-S\",\n",
+    "    # (\"Substrate\", \"MRP3\"): \"MRP3-S\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab4e9394-80d0-417f-8083-3a2ac03b716f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data(filename, purpose):\n",
+    "    data = LoadSDF(\n",
+    "        f\"ba_assets/data_for_models/data_threshold_all_filled_0.5_all_masters/{purpose}_chembl/{filename}.sdf\"\n",
+    "    )\n",
+    "\n",
+    "    return np.stack(preprocessing_pipeline.transform(data.ROMol)), np.stack(\n",
+    "        data.Classification.astype(int)\n",
+    "    )"
    ]
   },
   {
@@ -489,54 +556,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d3e1b13-588f-4e6b-8ee1-3d34446a01ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_data(target):\n",
-    "    data = LoadSDF(\n",
-    "        f\"ba_assets/data_for_models/data_threshold_all_filled_0.5_all_masters/training_chembl+manual/{target}.sdf\"\n",
-    "    )\n",
-    "\n",
-    "    return np.stack(preprocessing_pipeline.transform(data.ROMol)), np.stack(\n",
-    "        data.Classification.astype(int)\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "efe15339-84fb-4848-bf19-8eb21dc81321",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_test(target):\n",
-    "    chembl = LoadSDF(\n",
-    "        f\"ba_assets/data_for_models/data_threshold_all_filled_0.5_all_masters/testing_chembl/{target}.sdf\"\n",
-    "    )\n",
-    "    manual = LoadSDF(\n",
-    "        f\"ba_assets/data_for_models/data_threshold_all_filled_0.5_all_masters/testing_manual/{target}.sdf\"\n",
-    "    )\n",
-    "    data = pd.concat([chembl, manual])\n",
-    "\n",
-    "    return np.stack(preprocessing_pipeline.transform(data.ROMol)), np.stack(\n",
-    "        data.Classification.astype(int)\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "04e08ed5-1c67-4692-8979-10c0f67af4cc",
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_model(model, training, test):\n",
-    "    # Destructure data\n",
     "    X, y = training\n",
     "    X_test, y_test = test\n",
     "\n",
-    "    # Train\n",
     "    with joblib.parallel_config(\"loky\", n_jobs=-1):\n",
     "        model.fit(X, y)\n",
     "\n",
@@ -566,6 +593,7 @@
    "source": [
     "import atexit\n",
     "import shutil\n",
+    "import os\n",
     "\n",
     "from dask.distributed import Client\n",
     "from dask_jobqueue import SLURMCluster"
@@ -604,7 +632,7 @@
    },
    "outputs": [],
    "source": [
-    "cluster.scale(len(models) * len(targets))"
+    "cluster.adapt(minimum=4, maximum=len(models) * len(targets))"
    ]
   },
   {
@@ -632,8 +660,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_training = {target: client.submit(load_data, target, priority=1) for target in targets}\n",
-    "data_test = {target: client.submit(load_test, target, priority=1) for target in targets}"
+    "data_training = {\n",
+    "    id: client.submit(load_data, filename, \"training\", priority=1)\n",
+    "    for id, filename in targets.items()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a68fa80-7728-4978-9d19-4e71ddbfa962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_testing = {\n",
+    "    id: client.submit(load_data, filename, \"testing\", priority=1)\n",
+    "    for id, filename in targets.items()\n",
+    "}"
    ]
   },
   {
@@ -644,26 +687,16 @@
    "outputs": [],
    "source": [
     "jobs = {\n",
-    "    (model_name, target_name): client.submit(\n",
+    "    (target_id, model_id): client.submit(\n",
     "        train_model,\n",
     "        model,\n",
-    "        data_training[target_name],\n",
-    "        data_test[target_name],\n",
-    "        key=f\"train_model_{model_name}-{target_name}\",\n",
+    "        data_training[target_id],\n",
+    "        data_testing[target_id],\n",
+    "        key=f\"train_model_{model_id}-{target_id}\",\n",
     "    )\n",
-    "    for model_name, model in ((parameter_search_name(model), model) for model in models)\n",
-    "    for target_name in targets\n",
+    "    for model_id, model in models.items()\n",
+    "    for target_id in targets.keys()\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b29acd2-bccb-4ab0-bc57-41a138e92369",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# [job.result() for job in jobs.values() if job.done()]"
    ]
   },
   {
@@ -682,44 +715,17 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d2f308a-1322-4f9f-9da3-fc677448923e",
+   "id": "50cbf7dd-6775-4e56-8dee-2600cd44d124",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_dir = Path(\"models\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "081d9372-d0dc-4c01-8393-1ef96160aaa5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def name_to_path(name):\n",
-    "    target, *maybe_substrate, architecture = name.split(\"-\")\n",
-    "\n",
-    "    if maybe_substrate == [\"S\"]:\n",
-    "        return Path(f\"Substrate/{target}/{architecture}_clf\")\n",
-    "    else:\n",
-    "        return Path(f\"Inhibition/{target}/{architecture}_clf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f976877-5cfd-46fd-a70a-c19f7171fa56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = [(name, job.result()) for name, job in jobs.items() if job.done()]\n"
+    "model_dir = Path(\"models_\")"
    ]
   },
   {
@@ -729,29 +735,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = [(name, job.result()) for name, job in jobs.items() if job.done()]\n",
+    "results = [(id, job.result()) for id, job in jobs.items() if job.done()]\n",
     "\n",
-    "for name, (model, cv, external) in results:\n",
-    "    path = name_to_path(name)\n",
-    "    model_dir.joinpath(path).parent.mkdir(exist_ok=True, parents=True)\n",
+    "for ((purpose_id, target_id), model_id), (model, cv, ext) in results:\n",
+    "    target_dir = model_dir.joinpath(purpose_id).joinpath(target_id)\n",
     "\n",
-    "    joblib.dump(model, model_dir.joinpath(f\"{path}.pkl\"))\n",
-    "    pd.DataFrame(cv).to_csv(model_dir.joinpath(f\"{path}.csv\"), index=False)\n",
-    "    pd.DataFrame(external).to_csv(model_dir.joinpath(f\"{path}.external.csv\"), index=False)\n",
+    "    target_dir.mkdir(exist_ok=True, parents=True)\n",
+    "\n",
+    "    joblib.dump(model, target_dir.joinpath(f\"{model_id}.pkl\"))\n",
+    "    pd.DataFrame(cv).to_csv(target_dir.joinpath(f\"{model_id}.cross.csv\"), index=False)\n",
+    "    pd.DataFrame(ext).to_csv(\n",
+    "        target_dir.joinpath(f\"{model_id}.external.csv\"), index=False\n",
+    "    )\n",
     "\n",
     "jobs_count, done_count = len(jobs), len([job for job in jobs.values() if job.done()])\n",
     "\n",
     "print(f\"Saved {len(results)}/{len(jobs)} models\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86be2bbe-5d22-4d09-96b2-21403234a11c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[job.result() for name, job in jobs.items() if job.done() and name.endswith(\"float64\")]"
    ]
   }
  ],
@@ -771,7 +770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
