Remove unused CV parameters

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -339,13 +339,8 @@
     "    {\n",
     "        \"scaler\": param_scalers,\n",
     "        \"rf__class_weight\": [\"balanced\"],\n",
-    "        \"rf__n_estimators\": [\n",
-    "            5,\n",
-    "            10,\n",
-    "            25,\n",
-    "            50,\n",
-    "        ],  # , 100, 250\n",
-    "        \"rf__max_depth\": [2, 4, 8, 16],  # , 32, 64\n",
+    "        \"rf__n_estimators\": [5, 10, 25, 50],\n",
+    "        \"rf__max_depth\": [2, 4, 8, 16],\n",
     "    },\n",
     ")"
    ]
