Load all data again and perform some basic checking

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -127,21 +127,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3d46087b-76a0-44d4-b912-54c4ce4cf39b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standardizer = FunctionTransformer(\n",
+    "    np.vectorize(Standardizer().fragment_parent, otypes=[Mol])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bdaa528a-0cbc-4d57-a3a3-7e50848b25ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocessing_pipeline = Pipeline(\n",
-    "    steps=[\n",
-    "        (\n",
-    "            \"standardizer\",\n",
-    "            FunctionTransformer(\n",
-    "                np.vectorize(Standardizer().fragment_parent, otypes=[Mol])\n",
-    "            ),\n",
-    "        ),\n",
-    "        (\"descriptors\", ECFPTransformer(ECFPID.ECFP4)),\n",
-    "    ]\n",
-    ")"
+    "descriptor_calculator = ECFPTransformer(ECFPID.ECFP4)"
    ]
   },
   {
@@ -475,8 +477,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from rdkit.Chem.PandasTools import LoadSDF"
+    "from rdkit.Chem.PandasTools import LoadSDF\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -511,13 +514,27 @@
    "outputs": [],
    "source": [
     "def load_data(filename, purpose):\n",
-    "    data = LoadSDF(\n",
+    "    from rdkit.Chem.rdmolfiles import MolToSmiles\n",
+    "\n",
+    "    data_chembl = LoadSDF(\n",
     "        f\"ba_assets/data_for_models/data_threshold_all_filled_0.5_all_masters/{purpose}_chembl/{filename}.sdf\"\n",
     "    )\n",
+    "    data_manual = LoadSDF(\n",
+    "        f\"ba_assets/data_for_models/data_threshold_all_filled_0.5_all_masters/{purpose}_manual/{filename}.sdf\"\n",
+    "    )\n",
+    "    data = pd.concat([data_chembl, data_manual])\n",
     "\n",
-    "    return np.stack(preprocessing_pipeline.transform(data.ROMol)), np.stack(\n",
-    "        data.Classification.astype(int)\n",
-    "    )"
+    "    # Standardize\n",
+    "    data = data.assign(ROMol=standardizer.transform(data.ROMol))\n",
+    "\n",
+    "    # Check duplicates\n",
+    "    if data.assign(smiles=data.ROMol.map(MolToSmiles)).duplicated([\"smiles\"]).any():\n",
+    "        raise Exception(\"improper data: duplicated entries\")\n",
+    "\n",
+    "    descriptors = descriptor_calculator.transform(data.ROMol)\n",
+    "    predictions = data.Classification.astype(int)\n",
+    "\n",
+    "    return np.stack(descriptors), np.stack(predictions)"
    ]
   },
   {
