Simplify data loading debugging by returning everything

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "descriptor_calculator = ECFPTransformer(ECFPID.ECFP4)"
+    "embedder = ECFPTransformer(ECFPID.ECFP4)"
    ]
   },
   {
@@ -522,19 +522,14 @@
     "    data_manual = LoadSDF(\n",
     "        f\"ba_assets/data_for_models/data_threshold_all_filled_0.5_all_masters/{purpose}_manual/{filename}.sdf\"\n",
     "    )\n",
-    "    data = pd.concat([data_chembl, data_manual])\n",
+    "    data = pd.concat([data_chembl, data_manual], ignore_index=True)\n",
     "\n",
-    "    # Standardize\n",
-    "    data = data.assign(ROMol=standardizer.transform(data.ROMol))\n",
+    "    data = data.assign(ROMol_standardized=standardizer.transform(data.ROMol))\n",
     "\n",
-    "    # Check duplicates\n",
-    "    if data.assign(smiles=data.ROMol.map(MolToSmiles)).duplicated([\"smiles\"]).any():\n",
-    "        raise Exception(\"improper data: duplicated entries\")\n",
-    "\n",
-    "    descriptors = descriptor_calculator.transform(data.ROMol)\n",
-    "    predictions = data.Classification.astype(int)\n",
-    "\n",
-    "    return np.stack(descriptors), np.stack(predictions)"
+    "    return data.assign(\n",
+    "        X=embedder.transform(data.ROMol_standardized).tolist(),\n",
+    "        y=data.Classification.astype(int),\n",
+    "    )"
    ]
   },
   {
@@ -573,8 +568,8 @@
    "outputs": [],
    "source": [
     "def train_model(model, training, test):\n",
-    "    X, y = training\n",
-    "    X_test, y_test = test\n",
+    "    X, y = np.stack(training.X), np.stack(training.y)\n",
+    "    X_test, y_test = np.stack(test.X), np.stack(test.y)\n",
     "\n",
     "    with joblib.parallel_config(\"loky\", n_jobs=-1):\n",
     "        model.fit(X, y)\n",
