Train all models again

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -499,10 +499,10 @@
     "    (\"Inhibition\", \"OATP1B3\"): \"OATP1B3\",\n",
     "    (\"Inhibition\", \"OCT1\"): \"OCT1\",\n",
     "    (\"Inhibition\", \"OCT2\"): \"OCT2\",\n",
-    "    # (\"Substrate\", \"BCRP\"): \"BCRP-S\",\n",
-    "    # (\"Substrate\", \"MDR1\"): \"MDR1-S\",\n",
-    "    # (\"Substrate\", \"MRP2\"): \"MRP2-S\",\n",
-    "    # (\"Substrate\", \"MRP3\"): \"MRP3-S\",\n",
+    "    (\"Substrate\", \"BCRP\"): \"BCRP-S\",\n",
+    "    (\"Substrate\", \"MDR1\"): \"MDR1-S\",\n",
+    "    (\"Substrate\", \"MRP2\"): \"MRP2-S\",\n",
+    "    (\"Substrate\", \"MRP3\"): \"MRP3-S\",\n",
     "}"
    ]
   },
