--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -732,7 +732,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_dir = Path(\"models_\")"
+    "model_dir = Path(\"models\")"
    ]
   },
   {
