Reorganize and fix imports

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -94,26 +94,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8e09c1c-696a-4c90-8475-2c5fb04969e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.pipeline import Pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dea12a26-98a6-4565-8b03-372f3d44aa62",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from common.lib.descriptors.cdk import ECFPID, ECFPTransformer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "699d1783-c3f7-4a94-986c-48d5530f18a4",
    "metadata": {},
    "outputs": [],
@@ -134,6 +114,16 @@
     "standardizer = FunctionTransformer(\n",
     "    np.vectorize(Standardizer().fragment_parent, otypes=[Mol])\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dea12a26-98a6-4565-8b03-372f3d44aa62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lib.descriptors.cdk import ECFPID, ECFPTransformer"
    ]
   },
   {
