--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -283,7 +283,7 @@
     "clf_logr = make_parameter_search(\n",
     "    Pipeline(\n",
     "        steps=[\n",
-    "            (\"scaler\", None),\n",
+    "            (\"scaler\", param_scalers),\n",
     "            (\"pca\", PCA(n_components=8, random_state=rng())),\n",
     "            (\n",
     "                \"logr\",\n",
@@ -321,7 +321,7 @@
     "clf_rf = make_parameter_search(\n",
     "    Pipeline(\n",
     "        steps=[\n",
-    "            (\"scaler\", None),\n",
+    "            (\"scaler\", param_scalers),\n",
     "            (\n",
     "                \"rf\",\n",
     "                RandomForestClassifier(max_features=1.0, random_state=rng(), n_jobs=-1),\n",
@@ -388,7 +388,7 @@
     "clf_svc = make_parameter_search(\n",
     "    Pipeline(\n",
     "        steps=[\n",
-    "            (\"scaler\", None),\n",
+    "            (\"scaler\", param_scalers),\n",
     "            (\"nystroem\", Nystroem()),\n",
     "            (\"svc\", SVC(class_weight=\"balanced\", random_state=rng(), probability=True)),\n",
     "        ]\n",
@@ -422,7 +422,7 @@
     "clf_xgb = make_parameter_search(\n",
     "    Pipeline(\n",
     "        steps=[\n",
-    "            (\"scaler\", None),\n",
+    "            (\"scaler\", param_scalers),\n",
     "            (\"xgb\", XGBClassifier(random_state=rng(), n_jobs=-1)),\n",
     "        ]\n",
     "    ),\n",
