Use deterministic RNG in Nystroem

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -389,7 +389,7 @@
     "    Pipeline(\n",
     "        steps=[\n",
     "            (\"scaler\", param_scalers),\n",
-    "            (\"nystroem\", Nystroem()),\n",
+    "            (\"nystroem\", Nystroem(random_state=rng())),\n",
     "            (\"svc\", SVC(class_weight=\"balanced\", random_state=rng(), probability=True)),\n",
     "        ]\n",
     "    ),\n",
