Disable substrate models and only load chembl data

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -489,10 +489,6 @@
     "    (\"Inhibition\", \"OATP1B3\"): \"OATP1B3\",\n",
     "    (\"Inhibition\", \"OCT1\"): \"OCT1\",\n",
     "    (\"Inhibition\", \"OCT2\"): \"OCT2\",\n",
-    "    (\"Substrate\", \"BCRP\"): \"BCRP-S\",\n",
-    "    (\"Substrate\", \"MDR1\"): \"MDR1-S\",\n",
-    "    (\"Substrate\", \"MRP2\"): \"MRP2-S\",\n",
-    "    (\"Substrate\", \"MRP3\"): \"MRP3-S\",\n",
     "}"
    ]
   },
@@ -506,13 +502,7 @@
     "def load_data(filename, purpose):\n",
     "    from rdkit.Chem.rdmolfiles import MolToSmiles\n",
     "\n",
-    "    data_chembl = LoadSDF(\n",
-    "        f\"ba_assets/data_for_models/data_threshold_all_filled_0.5_all_masters/{purpose}_chembl/{filename}.sdf\"\n",
-    "    )\n",
-    "    data_manual = LoadSDF(\n",
-    "        f\"ba_assets/data_for_models/data_threshold_all_filled_0.5_all_masters/{purpose}_manual/{filename}.sdf\"\n",
-    "    )\n",
-    "    data = pd.concat([data_chembl, data_manual], ignore_index=True)\n",
+    "    data = LoadSDF(f\"data/{purpose}_chembl/{filename}.sdf\")\n",
     "\n",
     "    data = data.assign(ROMol_standardized=standardizer.transform(data.ROMol))\n",
     "\n",
