--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -258,7 +258,7 @@
    "id": "b952b883-4148-4064-a0fb-3d2f3278880c",
    "metadata": {},
    "source": [
-    "## Define Models"
+    "### Define Models"
    ]
   },
   {
@@ -457,7 +457,7 @@
    "id": "e9f83a9c-1dde-480f-88e3-de32ae240aaf",
    "metadata": {},
    "source": [
-    "## Define input data"
+    "### Define input data"
    ]
   },
   {
